Fix small sizing issue with expand collapse toggle

--- a/src/devtools/views/Components/ExpandCollapseToggle.css
+++ b/src/devtools/views/Components/ExpandCollapseToggle.css
@@ -1,4 +1,5 @@
 .ExpandCollapseToggle {
+  flex: 0 0 1rem;
   width: 1rem;
   height: 1rem;
   padding: 0;
