--- a/src/devtools/views/Components/HooksTree.css
+++ b/src/devtools/views/Components/HooksTree.css
@@ -57,5 +57,6 @@
 }
 
 .ExpandCollapseToggleSpacer {
+  flex: 0 0 1rem;
   width: 1rem;
 }
