--- a/src/devtools/views/Components/KeyValue.css
+++ b/src/devtools/views/Components/KeyValue.css
@@ -30,5 +30,6 @@
 }
 
 .ExpandCollapseToggleSpacer {
+  flex: 0 0 1rem;
   width: 1rem;
 }
